@@ -12,16 +12,17 @@ la nube ni requerir conexión a internet para el uso básico.
 
 ## Stack
 
-| Capa         | Tecnología                                                                                                                   |
-| ------------ | ---------------------------------------------------------------------------------------------------------------------------- |
-| Lenguaje     | Java 25 (LTS)                                                                                                                |
-| UI           | JavaFX 24 (+ FXML para las vistas)                                                                                           |
-| Bandeja/tray | Dorkbox SystemTray (cross-platform Win/Mac/Linux)                                                                            |
-| Persistencia | SQLite embebido (`org.xerial:sqlite-jdbc`)                                                                                   |
-| Concurrencia | Virtual threads (`Executors.newVirtualThreadPerTaskExecutor()`) para el scheduler y accesos a DB, sin bloquear el hilo de UI |
-| Build        | Maven                                                                                                                        |
-| Gráficos     | JavaFX `LineChart` para el historial de consumo                                                                              |
-| Tipografía   | Fuentes variables embebidas: **Fraunces** (display) + **Manrope** (cuerpo), licencia OFL                                     |
+| Capa           | Tecnología                                                                                                                   |
+| -------------- | ---------------------------------------------------------------------------------------------------------------------------- |
+| Lenguaje       | Java 25 (LTS)                                                                                                                |
+| UI             | JavaFX 24 (+ FXML para las vistas)                                                                                           |
+| Notificaciones | Toasts propias de JavaFX (`ToastManager`) + sonido MP3 (`javafx-media`)                                                      |
+| Bandeja/tray   | Dorkbox SystemTray (cross-platform Win/Mac/Linux)                                                                            |
+| Persistencia   | SQLite embebido (`org.xerial:sqlite-jdbc`)                                                                                   |
+| Concurrencia   | Virtual threads (`Executors.newVirtualThreadPerTaskExecutor()`) para el scheduler y accesos a DB, sin bloquear el hilo de UI |
+| Build          | Maven (shade + launch4j para el EXE de Windows)                                                                              |
+| Gráficos       | JavaFX `LineChart` para el historial de consumo                                                                              |
+| Tipografía     | Fuentes variables embebidas: **Fraunces** (display) + **Manrope** (cuerpo), licencia OFL                                     |
 
 ## Estructura del proyecto
 
@@ -32,20 +33,24 @@ hydration-reminder/
 └── src/main/
     ├── java/com/hydration/
     │   ├── HydrationApp.java          # Entry point, arranca JavaFX + tray + scheduler
+    │   ├── Launcher.java              # Main del jar empaquetado (arranca HydrationApp)
     │   ├── model/
     │   │   ├── HydrationEntry.java    # Registro individual (timestamp, ml)
     │   │   └── UserSettings.java      # Meta diaria, intervalo, horario activo/silencioso
     │   ├── service/
     │   │   ├── DatabaseService.java   # CRUD sobre SQLite + cálculo de racha/historial
     │   │   ├── ReminderScheduler.java # Programación de recordatorios (virtual threads)
-    │   │   └── NotificationService.java # Envío de notificaciones nativas
+    │   │   └── NotificationService.java # Fachada: construye el contenido y delega en ToastManager
     │   ├── controller/
     │   │   ├── MainController.java    # Vista principal (progreso, registro rápido, racha)
     │   │   ├── HistoryController.java # Vista de historial (LineChart + estadísticas)
     │   │   └── SettingsController.java # Vista de configuración (metas, horarios)
     │   └── util/
     │       ├── TrayIconManager.java   # Configuración del ícono de bandeja y menú
-    │       └── AppIcons.java          # Carga el set de íconos de ventana (todas las resoluciones)
+    │       ├── AppIcons.java          # Carga el set de íconos de ventana (todas las resoluciones)
+    │       ├── Fonts.java             # Carga las fuentes embebidas (Fraunces + Manrope)
+    │       ├── ToastManager.java      # Toasts propias: ventana translúcida, apilado, acciones
+    │       └── SoundPlayer.java       # Reproduce el sonido de notificación (MP3)
     └── resources/
         ├── views/
         │   ├── main.fxml               # Vista principal
@@ -53,7 +58,10 @@ hydration-reminder/
         │   └── settings.fxml           # Vista de configuración
         ├── styles/
         │   ├── main.css                 # Estilos generales ("Marea nocturna")
-        │   └── history-chart.css        # Estilos específicos del LineChart
+        │   ├── history-chart.css        # Estilos específicos del LineChart
+        │   └── toast.css                # Estilos de las toasts
+        ├── sounds/
+        │   └── notification.mp3         # Sonido que acompaña cada toast
         ├── fonts/                        # Fraunces y Manrope (variable, embebidas)
         └── icons/                        # Logo/ícono de la app (ver sección Logo e íconos)
 ```
@@ -70,8 +78,8 @@ contorno quede perfectamente suave en cualquier tamaño.
 | `icons/tray-icon@32.png`, `@16.png`        | Variantes más chicas del mismo ícono, por si en algún SO hace falta forzar un tamaño específico en vez de dejar que Dorkbox escale `tray-icon.png`.                                                                                                                                       |
 | `icons/app-icon-{16..512}.png`             | Gota sobre tile redondeado con resplandor, en 8 resoluciones. `AppIcons.loadAll()` las carga todas y se las pasa a cada `Stage.getIcons()` (ventana principal, Historial, Configuración); JavaFX elige la resolución más apropiada según el contexto (barra de título, taskbar, alt-tab). |
 | `icons/app-icon-1024.png` / `app-icon.png` | Versión master en alta resolución, por si hace falta regenerar algo o usarla en un futuro splash screen.                                                                                                                                                                                  |
-| `icons/app-icon.ico`                       | Multi-resolución (16/24/32/48/64/128/256) para empaquetar con `jpackage` en Windows. No se usa en tiempo de ejecución de JavaFX.                                                                                                                                                          |
-| `icons/app-icon.icns`                      | Bundle de macOS (16 a 512@2x) para `jpackage` en macOS. Tampoco se usa en tiempo de ejecución.                                                                                                                                                                                            |
+| `icons/app-icon.ico`                       | Multi-resolución (16/24/32/48/64/128/256). Lo usa launch4j para ponerle ícono al EXE de Windows. No se usa en tiempo de ejecución de JavaFX.                                                                                                                                              |
+| `icons/app-icon.icns`                      | Bundle de macOS (16 a 512@2x) por si en el futuro se empaqueta con `jpackage` en macOS. Tampoco se usa en tiempo de ejecución.                                                                                                                                                            |
 
 ## Dirección visual: "Marea nocturna"
 
@@ -87,7 +95,9 @@ evitando el aspecto por defecto de JavaFX.
 ## Funcionalidades core (MVP)
 
 - Recordatorios periódicos configurables (cada X minutos, o rango horario ej. 9–18hs)
-- Notificación nativa desde la bandeja del sistema al cumplirse el intervalo
+- **Toast propia de JavaFX** al cumplirse el intervalo: ventana translúcida sin decorar
+  ("Marea nocturna"), esquinas redondeadas, sonido MP3, apilado vertical, clic en el cuerpo
+  para abrir la app y una fila de botones de registro rápido (**200/300/500 ml**)
 - Registro de consumo por vaso (cantidades predefinidas: 200/300/500 ml)
 - Meta diaria configurable (por defecto 2000 ml) con barra de progreso
 - Persistencia local en SQLite: historial de consumo por día
@@ -142,98 +152,60 @@ empaquetar el jar con `mvnw.cmd clean package`.
 ./mvnw clean test
 ```
 
-> La suite usa **JUnit 5.10** y **Mockito 5.23.0**. Los tests de
-> `NotificationService` disparan notificaciones nativas reales del SO durante la
-> corrida (esto agrega ~8 s y abre notificaciones en pantalla); los demás tests
-> son rápidos. Al final se imprime el resumen, por ejemplo:
-> `Tests run: 30, Failures: 0, Errors: 0, Skipped: 0`.
+> La suite usa **JUnit 5.10** y **Mockito 5.23.0**. `NotificationServiceTest`
+> verifica los toasts con un `ToastManager` mockeado (no abre ventanas ni emite
+> sonido); el resto cubre scheduler, DB, íconos y tray. Al final se imprime el
+> resumen, por ejemplo: `Tests run: 29, Failures: 0, Errors: 0, Skipped: 0`.
+> La cobertura se valida con **JaCoCo** (mínimo 80 % en `com.hydration.model.*`
+> y `com.hydration.service.*`) durante `verify`.
 
-## Empaquetar ejecutable (jpackage)
+## Empaquetar ejecutable (EXE de Windows)
 
-Para distribuir la app como ejecutable nativo de **Windows** (sin que el usuario
-tenga Java instalado) se usa `jpackage`, la herramienta que viene incluida en el
-JDK. No es multiplataforma: el comando debe correr en el mismo SO del destino,
-así que hay que ejecutarlo en Windows para hacer los `.exe`/`.msi`.
-
-### 1. Preparar los insumos (jar + dependencias runtime en una carpeta)
+El build de Maven genera un ejecutable nativo de Windows con **launch4j**:
+el plugin **shade** arma un jar con todas las dependencias (JavaFX, sus DLL
+nativas y los recursos) y launch4j lo envuelve en un `Hydration_Reminder.exe`.
 
 ```bash
-REM Compila y empaqueta: genera target\hydration-reminder-1.0.0.jar
-mvnw.cmd clean package
-
-REM Vuelca las dependencias runtime (incluido JavaFX y sus nativos) a una carpeta
-mvnw.cmd -ntp dependency:copy-dependencies -DincludeScope=runtime -DoutputDirectory=target\jpackage-input
-
-REM Copia el jar de la app junto a esas dependencias
-copy /y target\hydration-reminder-1.0.0.jar target\jpackage-input\
+# Compila, corre los tests y genera el EXE
+.\mvnw.cmd clean package
 ```
 
-> `target/jpackage-input` queda como el directorio `--input` que usa `jpackage`.
-> Incluye los `.dll` de JavaFX para Windows (vienen dentro de los jars
-> `javafx-graphics-win`, `javafx-controls-win`, etc.), así que el app corre sin
-> que el usuario tenga que instalar nada.
+Resultados dentro de `target\`:
 
-### 2. App-image: carpeta autocontenida (recomendado para probar)
+| Archivo                            | Descripción                                     |
+| ---------------------------------- | ----------------------------------------------- |
+| `hydration-reminder-1.0.0.jar`     | Jar de la app (sin dependencias)                |
+| `hydration-reminder-1.0.0-all.jar` | Jar sombreado: app + JavaFX + SQLite + recursos |
+| `dist\Hydration_Reminder.exe`      | Ejecutable de Windows (launch4j)                |
 
-```bash
-jpackage ^
-  --type app-image ^
-  --name Hydration Reminder ^
-  --app-version 1.0.0 ^
-  --input target\jpackage-input ^
-  --main-jar hydration-reminder-1.0.0.jar ^
-  --main-class com.hydration.HydrationApp ^
-  --dest target\dist ^
-  --icon src\main\resources\icons\app-icon.ico
-```
-
-Genera la carpeta autocontenida `target/dist/Hydration Reminder/` con su JRE
-embebido: ejecutás `Hydration_Reminder.exe` y la app abre sin depender de un Java
-instalado. Es la forma más simple de probar/distribuir sin instalar.
-
-### 3. Instalador .exe / .msi (distribución final)
-
-```bash
-REM Instalador EXE de Windows (no requiere herramientas adicionales)
-jpackage ^
-  --type exe ^
-  --name Hydration Reminder ^
-  --app-version 1.0.0 ^
-  --input target\jpackage-input ^
-  --main-jar hydration-reminder-1.0.0.jar ^
-  --main-class com.hydration.HydrationApp ^
-  --dest target\dist ^
-  --icon src\main\resources\icons\app-icon.ico ^
-  --win-menu ^
-  --win-shortcut
-
-REM Instalador MSI (requiere el toolkit WiX 3.0+ instalado en el sistema)
-jpackage ^
-  --type msi ^
-  --name Hydration Reminder ^
-  --app-version 1.0.0 ^
-  --input target\jpackage-input ^
-  --main-jar hydration-reminder-1.0.0.jar ^
-  --main-class com.hydration.HydrationApp ^
-  --dest target\dist ^
-  --icon src\main\resources\icons\app-icon.ico
-```
-
-> `exe` produce un instalador `.exe` de Windows sin herramientas extra.
-> `msi` produce un `.msi` y necesita el toolkit
-> [WiX](https://wixtoolset.org/) (solo para el paso de empaquetado del instalador).
-> El ícono se toma de `src/main/resources/icons/app-icon.ico` (multi-resolución,
-> el `.ico` se usa en tiempo de empaquetado; no en runtime). En macOS se usaría el
-> `app-icon.icns` equivalente.
+> El EXE se lanza con el JRE del sistema: el pom exige **Java 25+ instalado**
+> en la máquina destino (`<jre><minVersion>25.0.0</minVersion>`). Si en el
+> futuro querés una carpeta autocontenida con JRE embebido (sin depender de un
+> Java instalado), `jpackage` sobre el jar sombreado sigue siendo la vía.
 
 ## Notas de implementación
 
-- JavaFX no tiene soporte nativo de bandeja del sistema; por eso se usa
-  `dorkbox.systemTray`, que abstrae las diferencias entre Windows, macOS y Linux
-  mejor que `java.awt.SystemTray` puro.
+- Las notificaciones son **toasts propias de JavaFX** (`ToastManager`), no
+  notificaciones del SO: una ventana sin decorar y translúcida con la estética
+  "Marea nocturna". El dropshadow de la tarjeta se mantiene contenido dentro de
+  la ventana (`SHADOW_PADDING`): con el pipeline de software de Prism, un blur
+  que excede los bordes de una ventana translúcida se renderiza como fondo
+  blanco. Las toasts se apilan usando la altura real de cada una (la más nueva
+  abajo) y se cierran a los 8 s (pausa al pasar el mouse). JavaFX no tiene
+  soporte nativo de bandeja del sistema; por eso el menú del tray usa
+  `dorkbox.systemTray`.
+- El sonido de notificación se reproduce con `javafx-media` (`MediaPlayer`).
+  El MP3 vive como recurso del classpath y se extrae a un archivo temporal
+  antes de reproducirlo, porque `Media` no admite URIs `jar:` (contenido
+  dentro del jar sombreado). Si el audio falla, la toast se muestra igual.
 - El `ReminderScheduler` corre en un `ScheduledExecutorService` respaldado por
   virtual threads, así los timers y el acceso a SQLite no compiten con el hilo
   de UI de JavaFX (`Platform.runLater` se usa solo para tocar nodos de la UI).
+- El pom pasa flags de JVM tanto en `javafx:run` como en el EXE de launch4j:
+  `--enable-native-access=javafx.graphics`, `--enable-native-access=javafx.media`,
+  `--enable-native-access=ALL-UNNAMED` y `--sun-misc-unsafe-memory-access=allow`.
+  Silencian los warnings de native access de JDK 24+ (el módulo de media expone
+  natives propios, por eso `javafx.media` está listado explícitamente).
 - Las fuentes Fraunces y Manrope son variables (un solo archivo `.ttf` cubre
   todos los pesos vía ejes OpenType). El soporte de interpolación de peso de
   fuentes variables depende del motor de texto de la plataforma; si el SO no
